# airflow-celery

./: .gitignore  Dockerfile  Makefile  README.md  airflow-db-init.yml  airflow.cfg  airflow.db  docker-compose.yml  pyproject.toml
config/: airflow.cfg  local.env
dags/: example_dag.py
