[tool.poetry]
name = "airflow-celery"
version = "0.1.0"
description = ""
authors = ["socar-chopa <chopa@socar.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-airflow = {extras = ["celery"], version = "^2.10.5"}
psycopg2-binary = "^2.9.10"
apache-airflow-providers-postgres = "^6.1.1"
apache-airflow-providers-sqlite = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
